# lab-splay-tree

./: .gitignore  CMakeLists.txt  README.md  main.cpp  splay.cpp  splay.h  splay.md  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
.github/workflows/: cmake.yml
